--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -30,7 +31,7 @@
                 android:id="@+id/apkName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="6.0dip"
+                android:paddingStart="6.0dip"
                 android:singleLine="true"
                 android:text="Select APK"
                 android:textAppearance="?android:textAppearanceSmall"
@@ -40,7 +41,7 @@
                 android:id="@+id/apkPackage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="6.0dip"
+                android:paddingStart="6.0dip"
                 android:singleLine="true"
                 android:text="none"
                 android:textAppearance="?android:textAppearanceSmall" />
@@ -58,17 +59,31 @@
         android:gravity="bottom"
         android:orientation="horizontal">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/apkPath"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:layout_weight="1.0" />
+            android:layout_weight="1.0"
+            android:hint="Enter apk path"
+            app:errorEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/apkPath"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginTop="5dp"
+                android:inputType="textNoSuggestions"
+                android:singleLine="true" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.appcompat.widget.AppCompatImageButton
+            android:onClick="ChoiceFile"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:onClick="ChoiceFile" />
+            android:background="@drawable/browseapk"
+            app:srcCompat="@drawable/ic_folder_open" />
 
     </LinearLayout>
 
@@ -80,5 +95,15 @@
         android:layout_marginRight="10dp"
         android:onClick="HookFile"
         android:text="Hook" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:paddingTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="6.0dip"
+        android:singleLine="true"
+        android:gravity="center"
+        android:text="© 2021 Иван Тимашков"
+        android:textAppearance="?android:textAppearanceSmall" />
 
 </LinearLayout>
