--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SignatureKill" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SignatureKill" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">#444444</item>
         <item name="colorPrimaryDark">#212121</item>
         <item name="colorOnPrimary">#FF448aff</item>
