--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,12 +88,12 @@
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatCheckBox
-        android:id="@+id/superSignatureKill"
+        android:id="@+id/binMtSignatureKill"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Super Signature Kill" />
+        android:text="Bin Signature Kill" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/hookRun"
